--- a/client.htm
+++ b/client.htm
@@ -285,16 +285,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-175697.htm" title="Clash拍子新手全攻略：从安装到精通的实用指南">Clash拍子新手全攻略：从安装到精通的实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-175301.htm" title="深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南">深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南</a></li>
                         <li class="py-2"><a href="/news/article-171053.htm" title="苹果手机Clash全面排障指南：从配置到稳定的科学上网之路">苹果手机Clash全面排障指南：从配置到稳定的科学上网之路</a></li>
-                        <li class="py-2"><a href="/news/article-176092.htm" title="俄罗斯网络自由之路：全面解析科学上网的突围之道">俄罗斯网络自由之路：全面解析科学上网的突围之道</a></li>
-                        <li class="py-2"><a href="/news/article-170271.htm" title="挖瓦工科学上网全解析：轻松突破网络限制的终极指南">挖瓦工科学上网全解析：轻松突破网络限制的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-172582.htm" title="深度剖析Clash系列游戏：从硬件配置到极致优化的完整指南">深度剖析Clash系列游戏：从硬件配置到极致优化的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-171436.htm" title="深度剖析loco科学上网：从原理到实践的完整指南">深度剖析loco科学上网：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-171801.htm" title="词海探秘：全方位解析“clash”的语义迷宫与使用艺术">词海探秘：全方位解析“clash”的语义迷宫与使用艺术</a></li>
+                        <li class="py-2"><a href="/news/article-174913.htm" title="华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南">华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-177662.htm" title="苹果用户必备：V2Ray完整下载与配置终极指南">苹果用户必备：V2Ray完整下载与配置终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-172215.htm" title="群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理">群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理</a></li>
+                        <li class="py-2"><a href="/news/article-176877.htm" title="全面使用指南：科学上网 APK 2018 5，让信息自由触手可及">全面使用指南：科学上网 APK 2018 5，让信息自由触手可及</a></li>
                         <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-173342.htm" title="科学上网的艺术：i站使用全攻略与深度解析">科学上网的艺术：i站使用全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-174125.htm" title="解锁网络自由：Quantumult X与V2Ray的完美结合指南">解锁网络自由：Quantumult X与V2Ray的完美结合指南</a></li>
                         <li class="py-2"><a href="/news/article-173727.htm" title="探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南">探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-175697.htm" title="Clash拍子新手全攻略：从安装到精通的实用指南">Clash拍子新手全攻略：从安装到精通的实用指南</a></li>
                     </ul>
     </div>
 </div>
@@ -306,7 +306,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
